# stm32cubeprog

./: README.md  pyproject.toml
stm32cubeprog/: __init__.py  cli.py
stm32cubeprog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
